# ose

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md
backend/: Dockerfile.backend  entrypoint.sh  pyproject.toml  schema.yml
backend/accounts/: admin.py
backend/accounts/api/: views.py
backend/accounts/migrations/: 0001_inital.py  0001_initial.py
backend/config/: settings.py  urls.py
backend/core/: admin.py  models.py  signals.py
backend/core/api/: custom_filters.py  custom_permissions.py  serializers.py  urls.py  views.py
backend/core/api/serializers/: filter_serializers.py  lesson_name_serializers.py  lesson_variant_resource_serializers.py  lesson_variant_serializers.py  resource_serializers.py  subject_serializers.py  teaching_style_serializers.py  topic_serializers.py  variation_serializers.py
backend/core/api/views/: filter_views.py  lesson_name_views.py  lesson_variant_resource_views.py  lesson_variant_views.py  resource_views.py  subject_views.py  teaching_style_views.py  topic_views.py  variation_views.py
backend/core/management/commands/: populate_db.py
backend/core/migrations/: 0001_initial.py  0002_curriculum_unit_unitlesson_and_more.py  0002_lessonname_lessonvariant_lessonvariantresource_and_more.py  0002_lessonname_subjects_resource_subjects_topic_subjects.py  0002_remove_resource_is_published.py
backend/core/tests/: base.py  test_lesson_name.py  test_lesson_variant.py  test_lesson_variant_resource.py  test_resource.py  test_signals.py  test_subject.py  test_teaching_style.py  test_topic.py  test_variation.py
(+10 files in other folders)
